# ice-cube-raytracing

./: CMakeLists.txt  README.md
docs/: 01-contents.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  51-biblio.tex  preamble.inc.tex  report.tex
docs/extra/: presentation.pptx  title.docx
docs/inc/csv/: time.csv
docs/inc/idef0/: scheme.rsf
docs/inc/img/: classes.drawio  schemes.drawio
docs/inc/imp/: cube.txt  ray_cast.txt  render.txt  sphere.txt
src/: application.cpp  application.h  geometry.cpp  geometry.h  imgui.cpp  main.cpp  model.cpp  model.h  objects.cpp  objects.h  pch.h  renderer.cpp  renderer.h
